--- a/docs/components/icon.html
+++ b/docs/components/icon.html
@@ -19,7 +19,9 @@
     <div class="example">
       <div class="preview">
         <ui-icon name="home" id="example-icon"></ui-icon>
-        <ui-button onclick="changeIconName()">Reactivity Test</ui-button>
+        <ui-button onclick="changeIconName()">
+          <button>Reactivity Test</button>
+        </ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
