--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -37,7 +37,9 @@
     <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-button>Button</ui-button>
+        <ui-button>
+          <button>Button</button>
+        </ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -45,7 +47,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button&gt;Button&lt;/ui-button&gt;
+&lt;ui-button&gt;
+  &lt;button&gt;Button&lt;/button&gt;
+&lt;/ui-button&gt;
 </code></pre>
 
       </div>
@@ -56,12 +60,18 @@
     <div>Shapes: pill, circle, square</div>
     <div class="example">
       <div class="preview">
-        <ui-button shape="pill">Button</ui-button>
-        <ui-button shape="circle" aria-label="Button">
-          <ui-icon name="settings"></ui-icon>
+        <ui-button shape="pill">
+          <button>Button</button>
         </ui-button>
-        <ui-button shape="square" aria-label="Button">
-          <ui-icon name="settings"></ui-icon>
+        <ui-button shape="circle">
+          <button aria-label="Button">
+            <ui-icon name="settings"></ui-icon>
+          </button>
+        </ui-button>
+        <ui-button shape="square">
+          <button aria-label="Button">
+            <ui-icon name="settings"></ui-icon>
+          </button>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -70,14 +80,20 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;
-
-&lt;ui-button shape="circle" aria-label="Button"&gt;
-  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+&lt;ui-button shape="pill"&gt;
+  &lt;button&gt;Button&lt;/button&gt;
 &lt;/ui-button&gt;
 
-&lt;ui-button shape="square" aria-label="Button"&gt;
-  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+&lt;ui-button shape="circle"&gt;
+  &lt;button aria-label="Button"&gt;
+    &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+  &lt;/button&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button shape="square"&gt;
+  &lt;button aria-label="Button"&gt;
+    &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+  &lt;/button&gt;
 &lt;/ui-button&gt;
 </code></pre>
 
@@ -89,9 +105,15 @@
     <div>Sizes: small, medium, large. Default: small</div>
     <div class="example">
       <div class="preview">
-        <ui-button size="small">Button</ui-button>
-        <ui-button size="medium">Button</ui-button>
-        <ui-button size="large">Button</ui-button>
+        <ui-button size="small">
+          <button>Button</button>
+        </ui-button>
+        <ui-button size="medium">
+          <button>Button</button>
+        </ui-button>
+        <ui-button size="large">
+          <button>Button</button>
+        </ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -99,9 +121,17 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button size="small"&gt;Button&lt;/ui-button&gt;
-&lt;ui-button size="medium"&gt;Button&lt;/ui-button&gt;
-&lt;ui-button size="large"&gt;Button&lt;/ui-button&gt;
+&lt;ui-button size="small"&gt;
+  &lt;button&gt;Button&lt;/button&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button size="medium"&gt;
+  &lt;button&gt;Button&lt;/button&gt;
+&lt;/ui-button&gt;
+
+&lt;ui-button size="large"&gt;
+  &lt;button&gt;Button&lt;/button&gt;
+&lt;/ui-button&gt;
 </code></pre>
 
       </div>
@@ -113,9 +143,11 @@
     <div class="example">
       <div class="preview">
         <ui-button>
-          <ui-icon name="home"></ui-icon>
-          Button
-          <ui-icon name="settings"></ui-icon>
+          <button>
+            <ui-icon name="home"></ui-icon>
+            Button
+            <ui-icon name="settings"></ui-icon>
+          </button>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -125,9 +157,11 @@
 
 <pre><code>
 &lt;ui-button&gt;
-  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
-  Button
-  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+  &lt;button&gt;
+    &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+    Button
+    &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
+  &lt;/button&gt;
 &lt;/ui-button&gt;
 </code></pre>
 
@@ -139,7 +173,9 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-button disabled>Button</ui-button>
+        <ui-button>
+          <button disabled>Button</button>
+        </ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -147,7 +183,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button disabled&gt;Button&lt;/ui-button&gt;
+&lt;ui-button&gt;
+  &lt;button disabled&gt;Button&lt;/button&gt;
+&lt;/ui-button&gt;
 </code></pre>
 
       </div>
@@ -158,7 +196,9 @@
     <div>Busy state</div>
     <div class="example">
       <div class="preview">
-        <ui-button busy>Busy</ui-button>
+        <ui-button busy>
+          <button>Busy</button>
+        </ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -166,7 +206,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-button busy&gt;Busy&lt;/ui-button&gt;
+&lt;ui-button busy&gt;
+  &lt;button&gt;Busy&lt;/button&gt;
+&lt;/ui-button&gt;
 </code></pre>
 
       </div>
