--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -63,7 +63,7 @@
         <ui-button shape="pill">
           <button>Button</button>
         </ui-button>
-        <ui-button shape="circle">
+        <ui-button shape="circle" size="small">
           <button aria-label="Button">
             <ui-icon name="settings"></ui-icon>
           </button>
@@ -102,17 +102,27 @@
   </div>
 
   <div class="content-item">
-    <div>Sizes: small, medium, large. Default: small</div>
+    <div>Sizes: small, medium, large. Default: medium</div>
     <div class="example">
       <div class="preview">
         <ui-button size="small">
-          <button>Button</button>
+          <button><ui-icon name="home"></ui-icon>Button</button>
         </ui-button>
         <ui-button size="medium">
-          <button>Button</button>
+          <button><ui-icon name="home"></ui-icon>Button</button>
         </ui-button>
         <ui-button size="large">
-          <button>Button</button>
+          <button><ui-icon name="home"></ui-icon>Button</button>
+        </ui-button>
+
+        <ui-button shape="square" size="small">
+          <button><ui-icon name="home"></ui-icon></button>
+        </ui-button>
+        <ui-button shape="square" size="medium">
+          <button><ui-icon name="home"></ui-icon></button>
+        </ui-button>
+        <ui-button shape="square" size="large">
+          <button><ui-icon name="home"></ui-icon></button>
         </ui-button>
       </div>
       <div class="toolbar">
