--- a/ui/styles/layouts/rows.css
+++ b/ui/styles/layouts/rows.css
@@ -1,29 +1,26 @@
 /* app shell */
-html,
-body{
+html,body{
   height:100%;
 }
 
 body{
-  height:100svh;
   overflow:hidden;
 }
 
-/* root app container */
+/* app container */
 ui-app{
   position:fixed;
   display:block;
   width:100%;
   height:100svh;
   overflow-y:scroll;
-  overflow-x:auto;
+  overflow-x:hidden;
 }
 
 /* page layout */
 ui-layout{
   position:relative;
   display:flex;
+  flex-direction:column;
   width:100%;
-  max-width:1920px;
-  margin-inline:auto;
 }
