--- a/ui/styles/typography.css
+++ b/ui/styles/typography.css
@@ -11,7 +11,7 @@
   --font-weight-bold:700;
 
   /* body font sizes */
-  --font-size-x-small:0.75rem;
+  --font-size-x-small:max(11px, 0.75rem);
   --font-size-small:0.875rem;
   --font-size-normal:1rem;
   --font-size-large:1.125rem;
