--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -38,7 +38,10 @@
     <div class="example">
       <div class="preview">
         <ui-button>
-          <button>Button</button>
+          <button><ui-icon name="settings"></ui-icon>Button</button>
+        </ui-button>
+        <ui-button size="medium">
+          <button><ui-icon name="settings"></ui-icon>Button</button>
         </ui-button>
       </div>
       <div class="toolbar">
